ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
      - host: minio.local
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: minio-service
                  port:
                    number: 9000
